1999-07-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add fcall_{objc,java}.h and _fcall.m.
	(SRC): Add fcall_{objc,java}.m.

	* FCall.m: Include fcall_{objc,java}.h instead of avcall.h.
	(fillHiddenArguments): Use objc_setup_call, java_setup_call,
	and java_setup_static_call instead of direct use av_* macros.
	(avcall_add_primitive): Remove.
	(add_ffi_types): Use calls to {objc_java}_set_return_type and
	{objc_java}_add_primitive per call type.
	([FCall_c -performCall]): Call {java_objc}_call instead of
	av_call.

	* FArguments.h (FArguments_c): Replace avalist with objc_avalist
	and java_avalist.

1999-07-05    <mgd@HELEN>

	* Arguments.m: When __CYGWIN__, include sys/cygwin.h and
	windows.h.
	(stripSlash, convertToLongPath): New internal functions.
	([Arguments_c -_runningFromInstall_]): Convert candidate SWARMHOME
	directories to Win32, and then expand them for strcmp (continue
	to use inode comparision for Unix).
	([Arguments_c -createEnd]): Set executablePath.
	([Arguments_c -getExecutablePath]): Return executablePath.
	(findDirectory): Handle empty executablePath.
	([Arguments_c -_runningFromInstall_]): Likewise.

	* Arguments.h (Arguments_c): New ivar executablePath.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* modulemap.el (generate-module-map): Include string.h for strlen.

	* {Lisp,HDF5}Archiver.m, defobj.m: Move global archiver objects 
	variables to defobj.m.

	* directory.m (create_signature_from_class_name): New function.
	(java_next_phase): Use it.  nextPhase is of type Object.
	(create_signature_from_object): Use it.
	(create_signature): Remove.
	(java_ensure_selector): Allocate space in signatureBuf for
	return type, object, and selector.

	* DefObject.m ([Object_s -lispIn:]): Accept _C_LNG as an array
	value type.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defalloc.h: Include swarmconfig.h.  
	(getZone, getSuballocList): Use PTRUINT instead of unsigned long.
